[tool]
[tool.poetry]
name = "aiohttp"
version = "4.0.1"
description = "Async http client/server framework (asyncio)"
license = "Apache 2"
classifiers = ["License :: OSI Approved :: Apache Software License", "Intended Audience :: Developers", "Programming Language :: Python", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.7", "Programming Language :: Python :: 3.8", "Programming Language :: Python :: 3.9", "Development Status :: 5 - Production/Stable", "Operating System :: POSIX", "Operating System :: MacOS :: MacOS X", "Operating System :: Microsoft :: Windows", "Topic :: Internet :: WWW/HTTP", "Framework :: AsyncIO"]
homepage = "https://github.com/aio-libs/aiohttp"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = ">=3.7,<4"                                                     # main
aiodns = { version = ">=1.1", optional = true }                         # main, speedups
aiosignal = ">=1.1.2"                                                   # main
async-timeout = { version = "==4.0.0a3", allow-prereleases = true }     # main
asynctest = { version = "==0.13.0", python = "<3.8" }                   # main
brotli = { optional = true, version = "*" }                             # main, speedups
cchardet = { optional = true, version = "*" }                           # main, speedups
chardet = "<5.0,>=2.0"                                                  # main
frozenlist = ">=1.1.1"                                                  # main
multidict = "<7.0,>=4.5"                                                # main
typing-extensions = ">=3.7.4"                                           # main
yarl = "<2.0,>=1.0"                                                     # main

[tool.poetry.dev-dependencies]
black = "==20.8b1"                  # dev
flake8 = "==3.8.4"                  # dev
flake8-pyi = "==20.10.0"            # dev
isort = "==5.6.4"                   # dev
mypy = "==0.790"                    # dev
pre-commit = "==2.9.3"              # dev
aiohttp-theme = "==0.1.6"           # dev, doc, spelling
pygments = "==2.7.3"                # dev, doc, spelling
sphinx = "==3.4.1"                  # dev, doc, spelling
sphinxcontrib-asyncio = "==0.3.0"   # dev, doc, spelling
sphinxcontrib-blockdiag = "==2.0.0" # dev, doc, spelling
sphinxcontrib-spelling = "==7.1.0"  # spelling
towncrier = "==19.2.0"              # dev, doc, spelling
cython = "0.29.21"                  # cython
typing_extensions = "3.7.4.3"       # cython
dephell = "^0.8.3"                  # dev

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
speedups = ["aiodns", "brotli", "cchardet"]
